# kachi

./: .coveragerc  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml  lint.yml  test.yml
examples/: example.yaml
kachi/: __init__.py  __main__.py  backup.py  config.py
src/kachi/: __init__.py  __main__.py  backup.py  cli.py  config.py  errors.py
tests/: __init__.py  test_backup.py  test_cli.py  test_config.py  test_errors.py
