[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[project]
name = "kachi"
version = "1.0.0"
dependencies = [
    "click",
    "pyyaml",
]
requires-python = ">=3.8"
authors = [
  {name = "Ricky White", email = "ricky@rickywhite.net"},
]
maintainers = [
  {name = "Ricky White", email = "ricky@rickywhite.net"},
]
description = "TODO: Add a project description."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["TODO:"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["pytest", "ruff","nuitka"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
kachi = "kachi.__main__:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-config=.coveragerc --cov --cov-report term-missing"
testpaths = [
    "tests",
]