[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[project]
name = "kachi"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [{ name = "Ricky White", email = "ricky@rickywhite.net" }]
maintainers = [{ name = "Ricky White", email = "ricky@rickywhite.net" }]
description = "Kachi is a simple tool for backing up valuable files."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["dotfile, backup, cli, configuration"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer==0.19.2",
  "pyyaml==6.0.3"
]

[project.urls]
Documentation = "https://github.com/EndlessTrax/kachi/README.md"
Repository = "https://github.com/EndlessTrax/kachi"
"Bug Tracker" = "https://github.com/EndlessTrax/kachi/issues"

[project.scripts]
kachi = "kachi.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-config=.coveragerc --cov=src/kachi --cov-report term-missing"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["I", "E"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.uv]
dev-dependencies = [
    "nuitka>=2.4.11",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.2",
]
